# stm32g0-wartcl

./: Cargo.toml  README.mkdn  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
