[package]
name = "wartcl-embedded-test"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.4", features = ["inline-asm", "critical-section-single-core"]}
cortex-m-rt = {version = "0.7.1"}
embedded-alloc = "0.5.1"
panic-halt = "0.2.0"
stm32-metapac = {version = "15.0", features = ["rt", "pac", "stm32h743zi"]}

[dependencies.wartcl]
path = "../../../proj/wartcl"
default-features = false

[[bin]]
name = "wartcl-embedded-test"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
